--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .debug{
@@ -13,6 +14,14 @@
     align-self: flex-end;
 }
 
+.center{
+    align-self: center;
+}
+
+.wrap{
+    flex-wrap: wrap;
+}
+
 .dflex{
     display: flex;
 }
@@ -20,27 +29,98 @@
 /* footer */
 
 footer{
-    height: 90px;
-    background-color: aquamarine;
+    height: 80px;
+    background-color: #282828;
 }
 
 /* main */
 
 main{
-    height: calc(100vh - 90px);
-    background-color: lightgray;
+    height: calc(100vh - 80px);
+    background-color: #141922;
+    color: white;
+}
+
+.topbar{
+    height: 70px;
+    background-color: #080b12;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.topbar a{
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 5px 15px;
+    border-radius: 20%;
+    margin-right: 10px;
 }
 
 .container{
     height: 100%;
-    background-color: red;
 }
 
+/* sidebar */
+
 aside{
+    background-color: black;
+    color: #717171;
     height: 100%;
     width: 200px;
+}
+
+.side1{
+    height: calc(100% - 100px);
     overflow: auto;
 }
+aside .logo{
+    max-width: 60%;
+}
+
+.logo img{
+    padding: 10px;
+}
+
+aside nav{
+    padding: 10px 10px;
+}
+
+#icons li img{
+    max-width: 15%;
+}
+
+aside p{
+    color: white;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+.installa{
+    justify-content: center;
+    width: 100%;
+    height: 100px;
+    padding-bottom: 5px;
+}
+
+.download{
+    border-bottom: 1px solid #717171;
+    margin-top: 40px;
+}
+
+.installa .download span::before{
+    content: '\f0ab';
+    font-family: 'Font Awesome\ 5 Free';
+    font-weight: 900;
+}
+
+.simo span::before{
+    content: '\f504';
+    font-family: 'Font Awesome\ 5 Free';
+    font-weight: 900;
+}
+
+/* /sidebar */
 
 .contenuto{
     height: 100%;
@@ -48,6 +128,3 @@ aside{
     overflow: auto;
 }
 
-.installa{
-    height: 10vh;
-}
