--- a/css/style.css
+++ b/css/style.css
@@ -53,13 +53,19 @@ main{
     color: white;
     border: 1px solid white;
     padding: 5px 15px;
-    border-radius: 20%;
+    border-radius: 30px;
     margin-right: 10px;
+}
+
+.topbar a:hover{
+    font-size: 1.1rem;
 }
 
 .container{
     height: 100%;
 }
+
+/* /main */
 
 /* sidebar */
 
@@ -122,9 +128,47 @@ aside p{
 
 /* /sidebar */
 
+
+/* cards */
+
 .contenuto{
     height: 100%;
     width: calc(100% - 200px);
     overflow: auto;
 }
 
+.scelte{
+    width: 100%;
+    justify-content: space-around;
+}
+
+.scelte nav li{
+    color: #7d7f84;
+    text-transform: uppercase;
+    padding: 10px;
+    list-style: none;
+    display: inline-block;
+}
+
+h2{
+    margin: 20px 10px;
+}
+
+/* /cards */
+
+.row{
+    width: 100%;
+}
+
+.card{
+    width: calc(100% / 6);
+    padding: 10px;
+}
+
+.album img{
+    width: 100%;
+}
+
+.didascalia{
+    text-align: center;
+}
