--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ h2{
 
 .row{
     width: 100%;
+    flex-wrap: wrap;
 }
 
 .card{
@@ -256,10 +257,13 @@ footer{
 
 .player{
     margin-top: 5px;
+    flex-grow: 1;
+    justify-content: center;
 }
 
 .progressbar{
-    width: 430px;
+    margin: 0 auto;
+    width: 40%;
     height: 5px;
     background-color: #717171;
     border-radius: 30px;
@@ -348,9 +352,22 @@ footer{
 
 /* media */
 
-@media screen and(max-width: 700px){
+@media screen and (min-width: 700px){
    .card{
     width: calc(100% / 2);
    }
 }
 
+
+@media screen and (min-width: 900px) {
+    .card{
+        width: calc(100% / 4);
+    }
+}
+
+
+@media screen and (min-width: 1000px){
+    .card{
+        width: calc(100% / 6);
+    }
+}
