--- a/css/style.css
+++ b/css/style.css
@@ -59,10 +59,6 @@ main{
     margin-right: 10px;
 }
 
-.topbar a:hover{
-    font-size: 1.1rem;
-}
-
 .container{
     height: 100%;
 }
@@ -80,6 +76,10 @@ aside{
 
 .side1{
     height: calc(100% - 100px);
+}
+
+.green{
+    border-left: 2px solid #adff2f;
 }
 
 .plus{
@@ -173,7 +173,9 @@ aside p{
     display: inline-block;
 }
 
-
+.scelte nav li:first-child{
+    border-bottom: 2px solid #adff2f;
+}
 
 h2{
     margin: 20px 10px;
@@ -338,11 +340,6 @@ footer{
     cursor: pointer;
 }
 
-.scelte nav li:first-child:hover{
-    border-bottom: 2px solid #adff2f;
-    cursor: pointer;
-}
-
 .installa .download span:hover{
     color: white;
     cursor: pointer;
@@ -378,8 +375,12 @@ footer{
     opacity: 1;
 }
 
-.icons ul li:hover{
+.icons li span:hover{
     color: white;
+}
+
+.topbar a:hover{
+    font-size: 1.1rem;
 }
 /* /hover */
 
